--- a/app/src/main/res/layout/fragment_adv.xml
+++ b/app/src/main/res/layout/fragment_adv.xml
@@ -2,12 +2,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/books"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.hackindroid.kyoto.fragments.AdvFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+<LinearLayout
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+<LinearLayout
+    android:id="@+id/llbuy"
+    android:background="@drawable/layout_bg"
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <ImageView
+        android:layout_margin="4dp"
+        android:backgroundTint="#FFFFFF"
+        android:background="@drawable/ic_business_center_black_24dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <TextView
+        android:layout_margin="10dp"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:text="Buy Book"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</LinearLayout>
+    <LinearLayout
+        android:id="@+id/llsell"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/layout_bg"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_margin="2dp"
+            android:backgroundTint="#FFFFFF"
+            android:background="@drawable/ic_attach_money_black_24dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        <TextView
+            android:layout_margin="10dp"
+            android:textColor="#FFFFFF"
+            android:textSize="30dp"
+            android:text="Sell Book"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+</LinearLayout>
 </FrameLayout>
