--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_resources"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_resources" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_buy_sell"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_buy_sell" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/title_settings" />
 
